<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_records" />
        <item
            android:id="@+id/nav_credit_calculator"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_credit_calculator" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_reminders" />
        <item
            android:id="@+id/nav_exchange_rates"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_exchange_rates" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
