<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgLogoSignIn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <ScrollView
        android:id="@+id/scrollViewSignIn"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogoSignIn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_title_sign_in"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"/>

            <AutoCompleteTextView
                android:id="@+id/edEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/text_email"
                android:drawableLeft="@drawable/ic_login_img"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <AutoCompleteTextView
                android:id="@+id/edPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/text_password"
                android:drawableLeft="@drawable/ic_password_img"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnSignInOnFragmentSign"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/text_btn_sign_in"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:background="@drawable/register_button"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="29dp"
                android:paddingEnd="20dp"/>



        </LinearLayout>

    </ScrollView>




    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginStart="30dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginEnd="30dp"-->
        <!--android:gravity="center">-->


        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:srcCompat="@mipmap/ic_launcher" />-->

        <!--<TextView-->
            <!--android:text="@string/text_title_sign_in"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<EditText-->
            <!--android:id="@+id/edEmailSignIn"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:hint="@string/text_email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:singleLine="true" />-->

        <!--<EditText-->
            <!--android:id="@+id/edPasswordSignIn"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:hint="@string/text_password"-->
            <!--android:inputType="textPassword"-->
            <!--android:singleLine="true" />-->

        <!--<Button-->
            <!--android:id="@+id/btnSignInOnFragmentSign"-->
            <!--android:text="@string/text_btn_sign_in"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</LinearLayout>-->

    <Button
        android:id="@+id/btnRegisterOnFragmentSignIn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/scrollViewSignIn"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/register_button"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="29dp"
        android:paddingStart="20dp"
        android:text="@string/text_btn_register"
        android:textColor="@color/white"
        android:textStyle="normal" />
</RelativeLayout>