<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="#e9e9e9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsvMain"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#FFFFFF"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_balance"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvBalanceMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Баланс"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorLineGrey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_list_bills"
                            android:textSize="14sp"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:layout_weight="0.9"/>

                        <ImageView
                            android:id="@+id/imgBtnSettingsBill"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="end"
                            android:layout_weight="0.1"
                            app:srcCompat="@mipmap/ic_settings_in_card" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <com.example.financeapp.ui.custom.MyGridView
                            android:id="@+id/gridBillMain"
                            android:numColumns="auto_fit"
                            android:scrollbars="none"
                            android:columnWidth="100dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:horizontalSpacing="8dp"
                            android:verticalSpacing="8dp"
                            android:padding="8dp"
                            android:clipToPadding="false">

                        </com.example.financeapp.ui.custom.MyGridView>

                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:foreground="?attr/selectableItemBackground"
                    card_view:cardCornerRadius="12dp"
                    card_view:cardElevation="2dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:text="@string/text_balance"
                                android:textColor="#000000"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/settingsCard"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                card_view:srcCompat="@mipmap/ic_card_setting" />

                        </RelativeLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/tvBalanceCard"
                                android:textSize="26sp"
                                android:textColor="#000000"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardLastRecords"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:foreground="?attr/selectableItemBackground"
                    card_view:cardCornerRadius="12dp"
                    card_view:cardElevation="2dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:text="@string/text_last_record"
                                android:textColor="#000000"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/settingsCardLastRecords"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                card_view:srcCompat="@mipmap/ic_card_setting" />

                        </RelativeLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/recyclerLastRecord"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            </android.support.v7.widget.RecyclerView>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


</LinearLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fabMain"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:backgroundTint="#43a335"-->
        <!--android:src="@drawable/plus_add" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="#43a335"
        android:src="@drawable/plus_add" />

</android.support.design.widget.CoordinatorLayout>
